# olist-ecommerce-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
airflow/: .env.example  Dockerfile  docker-compose.yml
airflow/dags/: olist_pipeline.py
ddl/: copy_silver.sql  create_tables.sql
ingestion/: Dockerfile  ingest.py  requirements.txt
olist_dbt/: dbt_project.yml
olist_dbt/models/marts/: dim_customers.sql  dim_products.sql  fct_orders.sql  schema.yml
olist_dbt/models/staging/: schema.yml  sources.yml  stg_order_details.sql  stg_order_reviews.sql
spark/: transform.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  varibles.tf
