[project]
name = "olist-ecommerce-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.68",
    "dbt>=1.0.0.40.15",
    "dbt-postgres>=1.10.0",
    "kagglehub>=1.0.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
