[project]
name = "olist-ecommerce-pipeline"
version = "0.1.0"
description = "End-to-end e-commerce data pipeline: Kaggle → S3 → PySpark/Glue → Redshift → dbt → Airflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.68",
    "dbt>=1.0.0.40.15",
    "dbt-postgres>=1.10.0",
    "dbt-redshift>=1.10.1",
    "kagglehub>=1.0.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
